fixed year vs. content misalignment

--- a/p01-tribute-page/main.scss
+++ b/p01-tribute-page/main.scss
@@ -13,7 +13,7 @@ $color-timeline: #555;
   color: $color-main;
   margin: 5%;
   padding: 2%;
-  border-radius: 2%;
+  border-radius: 10px;
 
   #header {
     font-family: $font-header;
